# rustydoku

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/components/: camera.rs  map.rs  mod.rs
src/components/figure/: mod.rs  square.rs
src/components/figures/: animation.rs  big_t_shape.rs  cube.rs  line.rs  mod.rs  spawner.rs  square.rs  t_shape.rs
src/components/placeholder/: mod.rs
src/components/ui/: button_restart.rs  game_over.rs  header.rs  mod.rs  score.rs
src/components/world/: background.rs  figure_zone.rs  map.rs  mod.rs  placeholder.rs
src/constants/: animation.rs  mod.rs
src/constants/figure/: animation.rs  assets.rs  interactive.rs  mod.rs  placeholder.rs  spawn_zone.rs  square.rs  transform.rs
src/constants/game_over/: camera.rs  mod.rs  ui_panel.rs
src/constants/idle/: camera.rs
src/constants/map/: assets.rs  mod.rs  transform.rs
src/constants/placeholder/: animation.rs  assets.rs  mod.rs  transform.rs
src/constants/square/: animation.rs  assets.rs  mod.rs  transform.rs
src/constants/ui/: assets.rs  mod.rs  restart_button.rs
src/constants/world/: assets.rs  background.rs  camera.rs  game_zone.rs  mod.rs  window.rs
src/events/: figure.rs  figure_spawner.rs  figures.rs  gameplay.rs  mod.rs
src/logic/: camera.rs  check.rs  check_combo.rs  check_game_over.rs  game_over_display.rs  map.rs  mod.rs  restart.rs  states.rs
src/logic/animation/: camera.rs  figure.rs  figure_spawner.rs  game_over_panel.rs  mod.rs  placeholder.rs  square.rs
src/logic/figure/: dragging.rs  mod.rs  placing.rs  spawner.rs  square.rs  trigger.rs
src/logic/gameplay/: check_combo.rs  check_game_over.rs  mod.rs
src/logic/map/: mod.rs
src/logic/placeholder/: mod.rs
src/logic/ui/: header.rs  (+3 more)
src/plugins/: camera.rs  default.rs  figure.rs  firure_spawner.rs  game_zone.rs  gameplay.rs  logic.rs  map.rs  mod.rs  placeholer.rs  ui.rs
src/resource/: figure_spawner.rs  game_zone.rs  map.rs  mod.rs  score.rs  square.rs  state_figure.rs
src/states/: mod.rs
src/world/: game_zone.rs  mod.rs
(+32 files in other folders)
