[package]
name = "rustydoku"
version = "0.1.0"
edition = "2021"
authors = ["Skalse <lavrishkovlad@gmail.com>"]
repository = "https://github.com/brizzinck/rustydoku.git"
license = "MIT"
keywords = ["game", "bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy = "0.14.2" 

[dependencies.bevy-inspector-egui]
version = "0.27"
optional = true  

[features]
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
debug-inspector = ["bevy-inspector-egui"]  

[profile.release]
opt-level = 3  
lto = "thin"   
codegen-units = 1
panic = "unwind"
strip = true

