[package]
name = "rustydoku"
version = "0.1.0"
edition = "2021"
authors = ["Skalse <lavrishkovlad@gmail.com>"]
repository = "https://github.com/brizzinck/rustydoku.git"
license = "MIT"
keywords = ["game", "bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy = "0.15.1" 
rand = "0.8.5"
uuid = { version = "1.13", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.19.0"

[dependencies.bevy-inspector-egui]
version = "0.29.1"
optional = true  

[features]
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
debug-inspector = ["bevy-inspector-egui"]  

[profile.release]
opt-level = 3  
lto = "thin"   
codegen-units = 1
panic = "unwind"
strip = true

